syntax = "proto3";

service Session {
    rpc CreateSession(SessionCreateRequest) returns (SessionCreateResponse) {}
    rpc DeleteSession(SessionRequest) returns (SessionResponse) {}
    rpc GetAllActiveSessions(SessionRequest) returns (SessionResponse) {}
    rpc GetSession(SessionRequest) returns (SessionResponse) {}
    rpc GetSessionUserName(SessionRequest) returns (SessionUserName) {}
    rpc GetSessionService(SessionRequest) returns (SessionResponse) {}
}

message SessionCreateRequest {
    bytes RequestBody = 1;
}

message SessionUserName {
    string userName = 1;
}

message SessionCreateResponse {
    int32 statusCode = 1;
    string statusMessage = 2;
    string sessionId = 3;
    bytes body = 4;
    map<string, string> header = 5;
}

message SessionRequest {
    string sessionId = 1;
    string sessionToken = 2;
}

message SessionResponse {
    int32 statusCode = 1;
    string statusMessage =2;
    map<string, string> header = 3;
    bytes body = 4;
}